Add extensive logging and modularize test logic
Enhanced test classes (`WordTest`, `VerbTest`, `NounTest`, etc.) by introducing consistent logging for better traceability. Modularized setup and teardown logic using `@BeforeAll`, `@BeforeEach`, `@AfterEach`, and `@AfterAll` for improved clarity and reusability. Refactored redundant file setup code to minimize duplication and ensure clean test environments.